2010-12-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcs/Makefile.am: Move cache to dmcs directory.
	* src/dmcs/Cache.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* include/dmcs/Cache.h: Likewise.
	* include/Makefile.am: Likewise.
	* include/dmcs/Makefile.am: Likewise.

	* src/Makefile.am (dmcsd_LDADD): Reorder to fix FTBFS on linux.

2010-12-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Require Boost >= 1.42.

2010-12-08  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/Makefile.am: Add missing noinst_LIBRARIES = libcache.a

2010-11-23  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/generator/staticGen.cpp: Improved RNG initialization.

2010-11-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dyndmcs/Makefile.am: New file.
	* src/network/Makefile.am: Likewise.
	* src/loopformula/Makefile.am: Likewise.
	* src/generator/Makefile.am: Likewise.

	* src/Makefile.am: Add new subdirs.
	* configure.ac: Likewise.

	* src/dmcs/BaseDMCS.cpp: Move from src.
	* src/dmcs/BeliefCombination.cpp: Likewise.
	* src/dmcs/ClaspProcess.cpp: Likewise.
	* src/dmcs/OptDMCS.cpp: Likewise.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.
	* src/dmcs/ProcessBuf.cpp: Likewise.
	* src/dmcs/QueryPlan.cpp: Likewise.
	* src/dyndmcs/DynamicConfiguration.cpp: Likewise.
	* src/dyndmcs/Instantiator.cpp: Likewise.
	* src/generator/DLVVisitor.cpp: Likewise.
	* src/generator/ContextGenerator.cpp: Likewise.
	* src/generator/LogicVisitor.cpp: Likewise.
	* src/generator/dmcsGen.cpp: Likewise.
	* src/generator/dynGen.cpp: Likewise.
	* src/generator/staticGen.cpp: Likewise.
	* src/loopformula/CNFLocalLoopFormulaBuilder.cpp: Likewise.
	* src/loopformula/IMPLocalLoopFormulaBuilder.cpp: Likewise.
	* src/loopformula/DimacsVisitor.cpp: Likewise.
	* src/loopformula/LocalLoopFormulaBuilder.cpp: Likewise.
	* src/network/Server.cpp: Likewise.

	* src/BaseDMCS.cpp: Remove.